Dark mode fixed

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -58,6 +58,8 @@ input{
      padding-left: 5px;
 }
 
+
+
 textarea{
     width: 100%;
      margin: 10px 0px;
@@ -101,6 +103,26 @@ button{
         height: 40px;
         margin: 10px;
         margin-left: 0;
+        
     }
     
+}
+
+.thank{
+    margin-left: 20px;
+    animation: pulse 2s cubic-bezier(0.4,0,0.6,1) infinite;
+}
+@keyframes pulse {
+    0%, 100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: .5;
+    }
+  }
+
+
+.last_message{
+    display: flex;
+    align-items: center;
 }
