--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -80,6 +80,11 @@
     height: 30px;
     position: absolute;
     bottom: 20px;   
+    cursor: pointer;
+}
+
+.intro-scroll:hover{
+    transition: 1s ease-in-out;
 }
 
 @media screen and (max-width : 480px){
@@ -101,3 +106,4 @@
       display: none;
   }
 }
+
