--- a/src/components/Toggle.css
+++ b/src/components/Toggle.css
@@ -5,24 +5,33 @@
     border: 1px solid #999;
     background-color: white;
     position: fixed;
+    outline: none;
     top: 10px;
     right: 10px;
     z-index: 999;
     display: flex;
     align-items: center;
     justify-content: space-around;
-}
 
+}
+ 
 .toggle-image{
     width: 15px;
     height: 15px;
 }
 
 .toggle-button{
-    width: 25px;
+    width: 26px;
     height: 25px;
     border-radius: 50%;
     background-color: #999;
     position: absolute;
     cursor: pointer;
+    outline: none;
+}
+
+.toggle-button:hover{
+    transition: 0.5s ease-in-out;
+    opacity: 90%;
+
 }
